# iCloud-Sync-Linux

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
icloud_sync/: __init__.py  __main__.py  config.py  sync_manager.py
systemd/: icloud-sync.service.example
tests/: test_cli.py  test_config.py  test_conflict.py  test_patterns.py
